- Added mime-type detector - Cleanup